# oxidizer

./: .mergify.yml  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json  docker-compose-ci.yml  docker-compose-tls.yml  docker-compose.yml  init.sh  psql-tls.dockerfile
.devcontainer/dev-pki/: .gitignore  generate-pki.sh  openssl-ca.cnf  openssl-server.cnf
.github/: dependabot.yml
.github/workflows/: clippy.yml  fmt.yml  main.yml  security_audit.yml  test.yml
dboom/: Cargo.toml
dboom-entity-macro/: Cargo.toml
dboom-entity-macro/src/: attrs.rs  entity_builder.rs  field_extras.rs  lib.rs  props.rs  relation_attr.rs  struct_like_helper.rs  utils.rs
dboom-migration/: Cargo.toml
dboom-migration/src/: errors.rs  helpers.rs  init.rs  main.rs
dboom/src/: entity.rs  lib.rs  migration.rs  tests_macro.rs
dboom/src/db/: db.rs  test_utils.rs
dboom/src/migrations/: V0001__entity.rs
migration_tests/: v00001_init.sql  v00002_entity.sql
oxidizer/: Cargo.toml
oxidizer-entity-macro/: Cargo.toml
oxidizer-entity-macro/src/: attrs.rs  entity_builder.rs  field_extras.rs  lib.rs  props.rs  utils.rs
oxidizer-entity-macro/src/sql_builder/: mod.rs  postgres.rs
oxidizer-entity-macro/src/sql_builder/postgres/: mod.rs
oxidizer-tests/: Cargo.toml
oxidizer-tests/src/: main.rs  tmp.rs
oxidizer/src/: entity.rs  lib.rs  migration.rs  tests_macro.rs  tests_transactions.rs
oxidizer/src/db/: connections.rs  db.rs  error.rs  generic_client.rs  macros.rs  mod.rs  test_utils.rs  tests_db.rs  transaction.rs  types.rs
oxidizer/src/migration/: errors.rs  mod.rs  runner.rs  tests.rs
oxidizer/src/migrations/: V0001__entity.rs  mod.rs
