[package]
name = "dboom-entity-macro"
version = "0.1.0"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.19"
darling = "0.10.2"
async-trait = "0.1.31"
Inflector = "0.11.4"