[package]
name = "dboom-migration"
version = "0.1.0"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
syn = { version = "1.0.35", features=["full"] }
quote = "*"
proc-macro2 = "1.0.18"

dboom-entity-macro = { path = "../dboom-entity-macro" }