[package]
name = "oxidizer-entity-macro"
version = "0.1.1"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>", "davysson <mail@davysson.dev>"]
edition = "2018"
keywords = ["orm", "tokio-postgres", "refinery", "postgres", "sql"]
categories = ["database"]
repository = "https://github.com/oxidizer-rs/oxidizer"
description = "Oxidizer helps you reduce the boiler plate of writing entities, tables & migrations when using tokio-postgres and refinery."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.38", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.18"
darling = "0.10.2"
async-trait = "0.1.37"
Inflector = "0.11.4"