[package]
name = "oxidizer-entity-macro"
version = "0.2.2"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>", "davysson <mail@davysson.dev>", "Vandre Leal <vandre@runlet.app>"]
edition = "2018"
keywords = ["orm", "tokio-postgres", "refinery", "postgres", "sql"]
categories = ["database"]
repository = "https://github.com/oxidizer-rs/oxidizer"
description = "Oxidizer helps you reduce the boiler plate of writing entities, tables & migrations when using tokio-postgres and refinery."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.24"
darling = "0.12.0"
async-trait = "0.1.42"
Inflector = "0.11.4"
