[package]

name = "oxidizer"
version = "0.2.1"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>", "davysson <mail@davysson.dev>", "Vandre Leal <vandre@runlet.app>"]
edition = "2018"
keywords = ["orm", "tokio-postgres", "refinery", "postgres", "sql"]
categories = ["database"]
repository = "https://github.com/oxidizer-rs/oxidizer"
description = "Oxidizer helps you reduce the boiler plate of writing entities, tables & migrations when using tokio-postgres and refinery."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
async-trait = "0.1.40"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version="0.5.4", features = ["with-chrono-0_4"]}
postgres-openssl = "0.3.0"
mobc = "0.5"
barrel = { version = "0.6.5", features = ["pg"] }
refinery = { version = "0.3.0", features = ["tokio-postgres"]}
openssl = { version = "0.10", features = ["vendored"] }

oxidizer-entity-macro = { version = "0.2.1", path = "../oxidizer-entity-macro" }