[package]

name = "oxidizer"
version = "0.2.2"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>", "davysson <mail@davysson.dev>", "Vandre Leal <vandre@runlet.app>"]
edition = "2018"
keywords = ["orm", "tokio-postgres", "refinery", "postgres", "sql"]
categories = ["database"]
repository = "https://github.com/oxidizer-rs/oxidizer"
description = "Oxidizer helps you reduce the boiler plate of writing entities, tables & migrations when using tokio-postgres and refinery."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls-openssl"]
tls-openssl = ["openssl", "postgres-openssl"]
tls-rustls = ["rustls", "tokio-postgres-rustls"]

[dependencies]
chrono = "0.4.19"
async-trait = "0.1.42"
tokio = { version = "0.3", features = ["full"] }
tokio-postgres = { version= "0.5.4", features = ["with-chrono-0_4"]}
mobc = "0.5"
barrel = { version = "0.6.5", features = ["pg"] }
refinery = { version = "0.4.0", features = ["tokio-postgres"]}
cfg-if = "1.0.0"

openssl = { version = "0.10", features = ["vendored"] , optional = true}
postgres-openssl = { version = "0.3.0",   optional = true}

rustls = { version = "0.18.0",  optional = true}
tokio-postgres-rustls = { version = "0.5.0", optional = true}

oxidizer-entity-macro = { version = "0.2.1", path = "../oxidizer-entity-macro" }
