[package]

name = "oxidizer"
version = "0.2.2"
authors = ["Gustavo Sampaio <gbritosampaio@gmail.com>", "davysson <mail@davysson.dev>", "Vandre Leal <vandre@runlet.app>"]
edition = "2018"
keywords = ["orm", "tokio-postgres", "refinery", "postgres", "sql"]
categories = ["database"]
repository = "https://github.com/oxidizer-rs/oxidizer"
description = "Oxidizer helps you reduce the boiler plate of writing entities, tables & migrations when using tokio-postgres and refinery."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
chrono = "0.4.19"
async-trait = "0.1.42"
tokio = { version = "0.2", features = ["full"] }
cfg-if = "1.0.0"
sha2 = "0.9.2"
hex = "0.4.2"
log = "0.4.11"

quaint = { git = "https://github.com/prisma/quaint.git", branch = "master", features = ["all"] }

oxidizer-entity-macro = { version = "0.2.1", path = "../oxidizer-entity-macro" }
